--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="assets/css/styles.css" />
 
-    <title>Title</title>
+    <title>Arkademi Blog</title>
   </head>
   <body>
     <!--=============== HEADER ===============-->
